--- a/Components/Control/SiteMenuEdit.cshtml
+++ b/Components/Control/SiteMenuEdit.cshtml
@@ -141,4 +141,4 @@
                             )
 
 
-<script>function itemdel(t,id){confirm('Вы уверены, что хотите удалить?');if(t == @hashcode){window.location = "SiteMenu.cshtml?deletemenuitem=true&itemid=" + id + "&hash=" + @hashcode;}return false;}</script>
+<script>function itemdel(t,id){confirm('Вы уверены, что хотите удалить?');if(t == @hashcode){window.location = "SiteMenu.cshtml?DeleteMenuItem=true&ItemId=" + id + "&hash=" + @hashcode;}return false;}</script>
