--- a/Components/Control/_Layout.cshtml
+++ b/Components/Control/_Layout.cshtml
@@ -158,7 +158,7 @@
 </div>*@
 
     <script src="~/Components/ui/js/passfield.min.js"></script>
-    <script src="~/Components/ui/js/admin.js"></script>
+    <script src="~/Components/ui/js/control/admin.js"></script>
     <script>new Image().src = "//counter.yadro.ru/hit?r" + escape(document.referrer) + ((typeof (screen) == "undefined") ? "" : ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ? screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) + ";h" + escape(document.title.substring(0, 80)) + ";" + Math.random();</script>
 
 </body>
