--- a/Components/Control/Settings.cshtml
+++ b/Components/Control/Settings.cshtml
@@ -99,7 +99,11 @@
             border-top-right-radius: 5px;
         }
         .i-tabs-link-item-link {
+            
+        }
+        .active a {
             border-bottom: 0 none;
+            color:black;
         }
     </style>
 }
@@ -110,8 +114,8 @@
         <li class="b-tabs-list-item active">
             <a class="i-tabs-link-item-link" href="Settings">Сайт</a>
         </li>
-        <li class="b-tabs-list-item" style="width: 100px;">
-            <a class="i-tabs-link-item-link"  href="UserSettings">Аккаунт</a>
+        <li class="b-tabs-list-item">
+            <a class="i-tabs-link-item-link" href="UserSettings">Аккаунт</a>
         </li>
     </ul>
 </div>
