--- a/Components/Control/UserSettings.cshtml
+++ b/Components/Control/UserSettings.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Page.Title = "Настройки аккаунта";
+    Page.Title = "Настройки";
     var UserName = WebSecurity.CurrentUserName;
 
     var db = Database.Open("Datebase");
@@ -31,7 +31,54 @@
     }
     var lastVisit = Request.Cookies["lastVisit"].Value;
 }
+@section Head{
+    <style>
+        .b-tabs {
+            padding: 20px 0 10px 0;
+            width: 100%;
+            border-bottom: 1px solid;
+        }
+        .b-tabs-list {
+            list-style: none;
+            display: inline;
+        }
+        .b-tabs-list-item {
+            display: inherit;
+            border-left: 1px solid;
+            border-top: 1px solid;
+            border-right: 1px solid;
+            margin: 0 5px 0 0;
+            padding: 6px 7px 10px 6px;
+            -webkit-border-top-left-radius: 5px;
+            -webkit-border-top-right-radius: 5px;
+            -moz-border-radius-topleft: 5px;
+            -moz-border-radius-topright: 5px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+        .i-tabs-link-item-link {
+            
+        }
+        .active a {
+            border-bottom: 0 none;
+            color:black;
+        }
+    </style>
+}
+
 @errorm
+
+<div class="b-tabs">
+    <ul class="b-tabs-list">
+        <li class="b-tabs-list-item">
+            <a class="i-tabs-link-item-link" href="Settings">Сайт</a>
+        </li>
+        <li class="b-tabs-list-item active">
+            <a class="i-tabs-link-item-link" href="UserSettings">Аккаунт</a>
+        </li>
+    </ul>
+</div>
+
 <form action="" method="post">
     @AntiForgery.GetHtml()
     <table>
@@ -54,10 +101,10 @@
             </tr>
         <tr>
                 <td class="table-label">
-                    <label for="Password">Пароль:</label>
+                    <label for="Password">Новый пароль:</label>
                 </td>
                 <td>
-                    <input id="Password" class="input" type="password" name="Password" value="@data.Password"/>
+                    <input id="Password" class="input" type="password" name="Password" value=""/>
                 </td>
             </tr>
  <tr>
